--- a/redux-modal-app/package.json
+++ b/redux-modal-app/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.0",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.43.4",
     "web-vitals": "^1.0.1"
   },
