--- a/postlist-app/package.json
+++ b/postlist-app/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.16.13",
     "axios": "^0.24.0",
     "final-form": "^4.20.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.7",
