--- a/postlist-app/package.json
+++ b/postlist-app/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.16.13",
     "axios": "^0.24.0",
     "final-form": "^4.20.4",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,6 +24,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
+    "reselect": "^4.1.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
