--- a/postlist-app/.eslintrc.json
+++ b/postlist-app/.eslintrc.json
@@ -5,6 +5,8 @@
     "node": true
   },
   "extends": ["plugin:react/recommended", "airbnb"],
+  // "extends": ["plugin:react/recommended", "airbnb"],
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -12,6 +14,46 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "only-warn"],
-  "rules": {}
+  // "plugins": ["react", "only-warn"],
+  "plugins": ["react"],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
+    "jsx-quotes": [2, "prefer-single"],
+    "react/prefer-stateless-function": "off",
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
+    "jsx-a11y/label-has-associated-control": [
+      "error",
+      {
+        "required": {
+          "some": ["nesting", "id"]
+        }
+      }
+    ],
+    "jsx-a11y/label-has-for": [
+      "error",
+      {
+        "required": {
+          "some": ["nesting", "id"]
+        }
+      }
+    ],
+    "react/require-default-props": [
+      2,
+      { "forbidDefaultForRequired": true, "ignoreFunctionalComponents": true }
+    ],
+    "object-curly-newline": "off",
+    "import/prefer-default-export": "off",
+    "import/extensions": [2, { "js": "never", "json": "never" }],
+    "no-restricted-exports": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "default-param-last": "off",
+    "react/prop-types": "off"
+  }
 }
