--- a/postlist-app/package.json
+++ b/postlist-app/package.json
@@ -33,7 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "lint:fix": "eslint --fix src --ext .js,.jsx"
   },
   "eslintConfig": {
     "extends": [
