prepare for eject

--- a/postlist-app/.eslintrc.json
+++ b/postlist-app/.eslintrc.json
@@ -54,6 +54,7 @@
     "no-restricted-exports": "off",
     "react/jsx-one-expression-per-line": "off",
     "default-param-last": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "comma-dangle": "off"
   }
 }
