--- a/postlist-app/.gitignore
+++ b/postlist-app/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/config
+/public
+/scripts
+
 # dependencies
 /node_modules
 /.pnp
