add unit testing redux saga & thunk

--- a/postlist-app/.eslintrc.json
+++ b/postlist-app/.eslintrc.json
@@ -55,6 +55,7 @@
     "default-param-last": "off",
     "react/prop-types": "off",
     "comma-dangle": "off",
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "implicit-arrow-linebreak": "off"
   }
 }
