--- a/postlist-app/package.json
+++ b/postlist-app/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@jest/globals": "^27.3.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@redux-saga/testing-utils": "^1.1.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -50,6 +51,7 @@
     "jest-watch-typeahead": "0.6.1",
     "mini-css-extract-plugin": "0.11.3",
     "moment": "^2.29.1",
+    "moxios": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -118,7 +120,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-only-warn": "^1.0.3",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "redux-mock-store": "^1.5.4"
   },
   "jest": {
     "roots": [
