--- a/nextjs-form-app/package.json
+++ b/nextjs-form-app/package.json
@@ -11,6 +11,8 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.17.2",
     "final-form": "^4.20.4",
+    "final-form-calculate": "^1.3.2",
+    "moment": "^2.29.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
